--- a/01_Pandas_Basics/1.3-selection_filtering.ipynb
+++ b/01_Pandas_Basics/1.3-selection_filtering.ipynb
@@ -2853,8 +2853,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "4244c703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>artists</th>\n",
+       "      <th>album</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>explicit</th>\n",
+       "      <th>popularity_norm</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Discombobulated</th>\n",
+       "      <td>4981</td>\n",
+       "      <td>DISCO</td>\n",
+       "      <td>Eminem</td>\n",
+       "      <td>Music To Be Murdered By - Side B (Deluxe Edition)</td>\n",
+       "      <td>49</td>\n",
+       "      <td>252578</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.914595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Houdini</th>\n",
+       "      <td>4733</td>\n",
+       "      <td>EDM</td>\n",
+       "      <td>Eminem</td>\n",
+       "      <td>Houdini</td>\n",
+       "      <td>90</td>\n",
+       "      <td>227239</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.969836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>As It Was</th>\n",
+       "      <td>3503</td>\n",
+       "      <td>HOUSE</td>\n",
+       "      <td>Harry Styles</td>\n",
+       "      <td>Harry's House</td>\n",
+       "      <td>87</td>\n",
+       "      <td>167303</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.819453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>One Of The Girls (with JENNIE, Lily Rose Depp)</th>\n",
+       "      <td>3142</td>\n",
+       "      <td>J-IDOL</td>\n",
+       "      <td>The Weeknd, JENNIE, Lily-Rose Depp</td>\n",
+       "      <td>The Idol Episode 4 (Music from the HBO Origina...</td>\n",
+       "      <td>87</td>\n",
+       "      <td>244684</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.819453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BAND4BAND (feat. Lil Baby)</th>\n",
+       "      <td>1554</td>\n",
+       "      <td>R-N-B</td>\n",
+       "      <td>Central Cee, Lil Baby</td>\n",
+       "      <td>BAND4BAND (feat. Lil Baby)</td>\n",
+       "      <td>87</td>\n",
+       "      <td>140733</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.819453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Clean Baby Sleep White Noise (Loopable)</th>\n",
+       "      <td>760</td>\n",
+       "      <td>SLEEP</td>\n",
+       "      <td>Dream Supplier, Baby Sleeps, Background White ...</td>\n",
+       "      <td>Best White Noise For Sleeping Baby</td>\n",
+       "      <td>88</td>\n",
+       "      <td>142222</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.869581</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  id   genre  \\\n",
+       "name                                                           \n",
+       "Discombobulated                                 4981   DISCO   \n",
+       "Houdini                                         4733     EDM   \n",
+       "As It Was                                       3503   HOUSE   \n",
+       "One Of The Girls (with JENNIE, Lily Rose Depp)  3142  J-IDOL   \n",
+       "BAND4BAND (feat. Lil Baby)                      1554   R-N-B   \n",
+       "Clean Baby Sleep White Noise (Loopable)          760   SLEEP   \n",
+       "\n",
+       "                                                                                          artists  \\\n",
+       "name                                                                                                \n",
+       "Discombobulated                                                                            Eminem   \n",
+       "Houdini                                                                                    Eminem   \n",
+       "As It Was                                                                            Harry Styles   \n",
+       "One Of The Girls (with JENNIE, Lily Rose Depp)                 The Weeknd, JENNIE, Lily-Rose Depp   \n",
+       "BAND4BAND (feat. Lil Baby)                                                  Central Cee, Lil Baby   \n",
+       "Clean Baby Sleep White Noise (Loopable)         Dream Supplier, Baby Sleeps, Background White ...   \n",
+       "\n",
+       "                                                                                            album  \\\n",
+       "name                                                                                                \n",
+       "Discombobulated                                 Music To Be Murdered By - Side B (Deluxe Edition)   \n",
+       "Houdini                                                                                   Houdini   \n",
+       "As It Was                                                                           Harry's House   \n",
+       "One Of The Girls (with JENNIE, Lily Rose Depp)  The Idol Episode 4 (Music from the HBO Origina...   \n",
+       "BAND4BAND (feat. Lil Baby)                                             BAND4BAND (feat. Lil Baby)   \n",
+       "Clean Baby Sleep White Noise (Loopable)                        Best White Noise For Sleeping Baby   \n",
+       "\n",
+       "                                                popularity  duration_ms  \\\n",
+       "name                                                                      \n",
+       "Discombobulated                                         49       252578   \n",
+       "Houdini                                                 90       227239   \n",
+       "As It Was                                               87       167303   \n",
+       "One Of The Girls (with JENNIE, Lily Rose Depp)          87       244684   \n",
+       "BAND4BAND (feat. Lil Baby)                              87       140733   \n",
+       "Clean Baby Sleep White Noise (Loopable)                 88       142222   \n",
+       "\n",
+       "                                                explicit  popularity_norm  \n",
+       "name                                                                       \n",
+       "Discombobulated                                     True         0.914595  \n",
+       "Houdini                                             True         2.969836  \n",
+       "As It Was                                          False         2.819453  \n",
+       "One Of The Girls (with JENNIE, Lily Rose Depp)     False         2.819453  \n",
+       "BAND4BAND (feat. Lil Baby)                          True         2.819453  \n",
+       "Clean Baby Sleep White Noise (Loopable)            False         2.869581  "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "songs.loc[(songs[\"artists\"]==\"Eminem\") | (songs[\"popularity_norm\"]>=2.800000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0562f612",
    "metadata": {},
    "outputs": [],
    "source": []
