--- a/04-Seaborn/06_Heatmaps_and_Clustering.ipynb
+++ b/04-Seaborn/06_Heatmaps_and_Clustering.ipynb
@@ -3,20 +3,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "708ec27c",
+   "id": "0733bf63",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns \n",
+    "\n",
+    "%matplotlib inline\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43c8b77b",
+   "cell_type": "markdown",
+   "id": "6ebc6d3c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A)Heatmaps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc85e80b",
+   "metadata": {},
+   "source": [
+    "B)Cluster Map"
+   ]
   }
  ],
  "metadata": {
