--- a/04-Seaborn/01_Data_Preparation_and_Styling.ipynb
+++ b/04-Seaborn/01_Data_Preparation_and_Styling.ipynb
@@ -1,24 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "af89ae09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c50ff40c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
